# keylink

./: .gitignore  Cargo.toml  Dockerfile-postgres  README.md  Rocket.toml  clients-config.json  db.sqlite  docker-compose.yml  keylink.toml
docs/: README.md  redirect_diagram.utxt
migrations/2020-11-03-101531_create_keylink/: down.sql  up.sql
migrations/2020-11-03-101531_create_keys_table/: up.sql
src/: db.rs  doc.rs  hatch.rs  main.rs  models.rs  schema.rs  user.rs  vc.rs
templates/: base.html.tera  index.html.tera  my_keys.html.tera
ui/: package.json  postcss.config.cjs  safelist.txt  svelte.config.js  tailwind.config.cjs
ui/src/: app.html
ui/src/lib/: cookies.ts  stores.ts
ui/src/lib/components/: BlobSign.svelte  BlobVerify.svelte  ISCCSign.svelte  ISCCVerify.svelte  NewKey.svelte  VCSign.svelte  VCVerify.svelte
ui/src/routes/: __layout.svelte  index.svelte
ui/src/routes/dashboard/: __layout.svelte  index.svelte
ui/src/routes/redirect/: index.svelte
ui/src/routes/signin/: index.svelte
vue/: README.md  package.json  vue.config.js
vue/public/: index.html  login.html
vue/src/: App.vue  Login.vue  main.js
vue/src/components/: create_key.vue  keys.vue  sign.vue  vc.vue  verify.vue
