[package]
name = "keylink"
version = "0.1.0"
authors = ["Simon Bihel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
serde = "1.0.59"
serde_json = "1.0.59"
anyhow = "1.0.33"

rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "0c150c2", features = ["tls"]}
openidconnect = { git = "https://github.com/ramosbugs/openidconnect-rs", rev = "f4a7abe" }
rocket_airlock = { git = "https://github.com/Weasy666/rocket_airlock", rev = "497d466c7eef30e0f5aaf245e940308629a404c7" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev = "0c150c2", default-features = false, features = ["diesel_sqlite_pool", "serve", "json"]}
# Need to import diesel (even though rocket_contrib re-export it) because of https://github.com/SergioBenitez/Rocket/issues/950
rocket-multipart-form-data = { git = "https://github.com/sbihel/rocket-multipart-form-data", rev = "32776bc" }

diesel = { version = "1.0", default-features = false, features = ["sqlite"]}

ssi = { git = "ssh://github.com/spruceid/ssi.git", rev = "491956c18d9c2e6fe622167a46293da98f8b5714" }
jsonwebtoken = { git = "ssh://github.com/spruceid/ssi.git", rev = "491956c18d9c2e6fe622167a46293da98f8b5714" }
# See https://github.com/rust-lang/cargo/issues/1851 if you have issues with SSH
# tl;dr: you most probably need to add you SSH key with `ssh-add` because Cargo doesn't read ~/.ssh/config
# or change the URL to use HTTPS
iscc-rs = { git = "https://github.com/sbihel/iscc-rs", rev = "27839eaff697236c601138e3263a9d9d3ef9783b" }
chrono = { version = "0.4", features = ["serde"] }
