[package]
name = "keylink"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/spruceid/keylink/"
# resolver = "2"
# doesn't work well with Diesel

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0"

rocket = { version =  "0.5.0-rc.1", features = ["json"] }
openidconnect = "2.1"
rocket_airlock = "0.3.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }

diesel = { version = "1.4", features = ["postgres", "chrono", "serde_json"] }
diesel_migrations = "2.1"

ssi = { version = "0.2" }
did-method-key = { version = "0.1" }
iscc-rs = { git = "https://github.com/sbihel/iscc-rs", rev = "27839eaff697236c601138e3263a9d9d3ef9783b" }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.13"
